--- a/StringFunApp.Solution/StringFunApp/StringFunApp/Views/VideoPlayerView.xaml
+++ b/StringFunApp.Solution/StringFunApp/StringFunApp/Views/VideoPlayerView.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:StringFunApp"
              xmlns:video="clr-namespace:FormsVideoLibrary"
-             x:Class="StringFunApp.VideoPlayerView">
+             x:Class="StringFunApp.Views.VideoPlayerView">
 
     <Grid>
         <Grid.RowDefinitions>
