--- a/StringFunApp.Solution/StringFunApp/StringFunApp/Views/VideoPlayerView.xaml
+++ b/StringFunApp.Solution/StringFunApp/StringFunApp/Views/VideoPlayerView.xaml
@@ -10,22 +10,12 @@
             <RowDefinition Height="2*" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        
+
         <video:VideoPlayer x:Name="videoPlayer" Grid.Row="0" 
-                           Source="{Binding Source={x:Reference FasesEnStappen},
+                           Source="{Binding Source={x:Reference StapVideos},
                                             Path=SelectedItem.VideoSource}"></video:VideoPlayer>
 
-        <!--<Picker x:Name="pickFasePlusStap" Title="Kies een Fase en Stap" Grid.Row="1">
-            <Picker.ItemsSource>
-                <x:Array Type="{x:Type x:String}">
-                    <x:String>Fase 1 Stap 1</x:String>
-                    <x:String>Fase 1 Stap 2</x:String>
-                    <x:String>Fase 1 Stap 3</x:String>
-                </x:Array>
-            </Picker.ItemsSource>
-        </Picker>-->
-
-        <ListView x:Name="FasesEnStappen" Grid.Row="1" ItemsSource="{Binding Videos}">
+        <ListView x:Name="StapVideos" Grid.Row="1" ItemsSource="{Binding Videos}">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <ViewCell>
