Functionality from buttons Work In Progress

--- a/StringFunApp.Solution/StringFunApp/StringFunApp/Views/MainView.xaml
+++ b/StringFunApp.Solution/StringFunApp/StringFunApp/Views/MainView.xaml
@@ -3,12 +3,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="StringFunApp.Views.MainView">
     <ContentPage.Content>
-        <Grid x:Name="KnoppenGrid">
-            <Grid.RowDefinitions>
+        <FlexLayout x:Name="KnoppenVerzameling" >
+            <!--<Grid.RowDefinitions>
                 <RowDefinition Height="200" />
                 <RowDefinition Height="200" />
                 <RowDefinition Height="200" />
-            </Grid.RowDefinitions>
+            </Grid.RowDefinitions>-->
             <Label Grid.Row="0">Stringfun</Label>
             <!--<Button Grid.Row="1" Grid.Column="0" HorizontalOptions="Center" VerticalOptions="CenterAndExpand" Command="{Binding KiesInstrument}" CommandParameter="Viool" BackgroundColor="{Binding VioolKnopKleur}" Text="Viool"></Button>
             <Button Grid.Row="1" Grid.Column="1" HorizontalOptions="Center" VerticalOptions="CenterAndExpand" Command="{Binding KiesInstrument}" CommandParameter="Altviool" BackgroundColor="{Binding AltvioolKnopKleur}" Text="AltViool"></Button>
@@ -16,6 +16,6 @@
             <Button Grid.Row="2" Grid.Column="0" HorizontalOptions="Center" VerticalOptions="CenterAndExpand" Command="{Binding KiesBoek}" CommandParameter="1" IsEnabled="{Binding Enabled}" Text="Boek 1"></Button>
             <Button Grid.Row="2" Grid.Column="1" HorizontalOptions="Center" VerticalOptions="CenterAndExpand" Command="{Binding KiesBoek}" CommandParameter="2" IsEnabled="{Binding Enabled}" Text="Boek 2"></Button>
             <Button Grid.Row="2" Grid.Column="2" HorizontalOptions="Center" VerticalOptions="CenterAndExpand" Command="{Binding KiesBoek}" CommandParameter="3" IsEnabled="{Binding Enabled}" Text="Boek 3"></Button>-->
-        </Grid>
+        </FlexLayout>
     </ContentPage.Content>
 </ContentPage>
