--- a/StringFunApp.Solution/StringFunApp/StringFunApp/Views/VideoPlayerView.xaml
+++ b/StringFunApp.Solution/StringFunApp/StringFunApp/Views/VideoPlayerView.xaml
@@ -12,7 +12,7 @@
             <RowDefinition Height="60"></RowDefinition>
         </Grid.RowDefinitions>
 
-        <Label Grid.Row="0">Stringfun</Label>
+        <Image Grid.Row="0" Source="https://www.staproeselare.be/stringfun/images/logo.png"></Image>
         
         <video:VideoPlayer x:Name="videoPlayer" Grid.Row="1" 
                            Source="{Binding Source={x:Reference StapVideos},
