Layout WIP. Added ContactView. Finished ErrorView.

--- a/StringFunApp.Solution/StringFunApp/StringFunApp/Views/MainView.xaml
+++ b/StringFunApp.Solution/StringFunApp/StringFunApp/Views/MainView.xaml
@@ -2,6 +2,9 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="StringFunApp.Views.MainView">
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="Contact" Command="{Binding ViewContact}"></ToolbarItem>
+    </ContentPage.ToolbarItems>
     <ContentPage.Content>
         <StackLayout>
             <FlexLayout JustifyContent="Center" BackgroundColor="Orange">
