--- a/StringFunApp.Solution/StringFunApp/StringFunApp/Views/ErrorView.xaml
+++ b/StringFunApp.Solution/StringFunApp/StringFunApp/Views/ErrorView.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="StringFunApp.Views.ErrorView">
     <ContentPage.Content>
-        <StackLayout HorizontalOptions="Center">
+        <StackLayout VerticalOptions="Center" HorizontalOptions="Center">
             <Label x:Name="ErrorMessage"></Label>
             <Button x:Name="btnRetry" Text="Retry" Clicked="BtnRetry_Clicked"></Button>
         </StackLayout>
