--- a/StringFunApp.Solution/StringFunApp/StringFunApp/Views/StapView.xaml
+++ b/StringFunApp.Solution/StringFunApp/StringFunApp/Views/StapView.xaml
@@ -3,18 +3,21 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:bhv="clr-namespace:StringFunApp.Behaviors"
              x:Class="StringFunApp.Views.StapView">
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="Contact" Command="{Binding ViewContact}"></ToolbarItem>
+    </ContentPage.ToolbarItems>
     <ContentPage.Content>
-        <StackLayout>
-            <FlexLayout JustifyContent="Center" BackgroundColor="Orange">
-                <Image Source="https://www.staproeselare.be/stringfun/images/logo.png"></Image>
-            </FlexLayout>
-            <FlexLayout>
-                <Label HorizontalOptions="Center" Text="{Binding TypeInstrument}"></Label>
-            </FlexLayout>
-            <FlexLayout>
-                <Label HorizontalOptions="Center" Text="{Binding BoekNaam}"></Label>
-            </FlexLayout>
-            <FlexLayout x:Name="Buttons" Wrap="Wrap"></FlexLayout>
-        </StackLayout>
+        <ScrollView>
+            <StackLayout>
+                <FlexLayout JustifyContent="Center" BackgroundColor="Orange">
+                    <Image Source="https://www.staproeselare.be/stringfun/images/logo.png"></Image>
+                </FlexLayout>
+                <FlexLayout JustifyContent="Center">
+                    <Label Margin="10" FontSize="Large" Text="{Binding TypeInstrument}"></Label>
+                    <Label Margin="10" FontSize="Large" Text="{Binding BoekNaam}"></Label>
+                </FlexLayout>
+                <FlexLayout x:Name="Buttons" Wrap="Wrap"></FlexLayout>
+            </StackLayout>
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
