--- a/StringFunApp.Solution/StringFunApp/StringFunApp/Views/StapView.xaml
+++ b/StringFunApp.Solution/StringFunApp/StringFunApp/Views/StapView.xaml
@@ -7,17 +7,30 @@
         <ToolbarItem Text="Contact" Command="{Binding ViewContact}"></ToolbarItem>
     </ContentPage.ToolbarItems>
     <ContentPage.Content>
-        <ScrollView>
-            <StackLayout>
-                <FlexLayout JustifyContent="Center" BackgroundColor="Orange">
-                    <Image Source="https://www.staproeselare.be/stringfun/images/logo.png"></Image>
-                </FlexLayout>
-                <FlexLayout JustifyContent="Center">
-                    <Label Margin="10" FontSize="Large" Text="{Binding TypeInstrument}"></Label>
-                    <Label Margin="10" FontSize="Large" Text="{Binding BoekNaam}"></Label>
-                </FlexLayout>
-                <FlexLayout x:Name="Buttons" Wrap="Wrap"></FlexLayout>
+        <AbsoluteLayout>
+            <ScrollView AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds="0,0,1,1">
+                <StackLayout>
+                    <FlexLayout JustifyContent="Center" BackgroundColor="Orange">
+                        <Image Source="https://www.staproeselare.be/stringfun/images/logo.png"></Image>
+                    </FlexLayout>
+                    <FlexLayout JustifyContent="Center">
+                        <Label Margin="10" FontSize="Large" Text="{Binding TypeInstrument}"></Label>
+                        <Label Margin="10" FontSize="Large" Text="{Binding BoekNaam}"></Label>
+                    </FlexLayout>
+                    <FlexLayout x:Name="Buttons" Wrap="Wrap"></FlexLayout>
+                </StackLayout>
+            </ScrollView>
+            <StackLayout x:Name="busyIndicator" AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds="0,0,1,1" IsVisible="{Binding Visible}" BackgroundColor="White">
+                <ActivityIndicator IsRunning="True" Color="Black" 
+                   HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
+                    <ActivityIndicator.WidthRequest>
+                        <OnPlatform x:TypeArguments="x:Double">
+                            <On Platform="iOS, Android">50</On>
+                            <On Platform="Windows">200</On>
+                        </OnPlatform>
+                    </ActivityIndicator.WidthRequest>
+                </ActivityIndicator>
             </StackLayout>
-        </ScrollView>
+        </AbsoluteLayout>
     </ContentPage.Content>
 </ContentPage>
