Added icons and splashscreen

--- a/StringFunApp.Solution/StringFunApp/StringFunApp/Views/MainView.xaml
+++ b/StringFunApp.Solution/StringFunApp/StringFunApp/Views/MainView.xaml
@@ -7,7 +7,7 @@
     </ContentPage.ToolbarItems>
     <ContentPage.Content>
         <StackLayout>
-            <FlexLayout JustifyContent="Center" BackgroundColor="Orange">
+            <FlexLayout JustifyContent="Center" BackgroundColor="#2287b1">
                 <Image Source="https://www.staproeselare.be/stringfun/images/logo.png"></Image>
             </FlexLayout>
             <FlexLayout x:Name="InstrumentKnoppen" Wrap="Wrap" JustifyContent="Center"></FlexLayout>
