Fixed orientation bug and changed color of navbar

--- a/StringFunApp.Solution/StringFunApp/StringFunApp/App.xaml
+++ b/StringFunApp.Solution/StringFunApp/StringFunApp/App.xaml
@@ -9,6 +9,10 @@
 
             <conv:ItemTappedEventArgsConverter x:Key="ItemTappedEventArgsConv"></conv:ItemTappedEventArgsConverter>
 
+            <Style TargetType="NavigationPage">
+                <Setter Property="BarBackgroundColor" Value="#2287b1"/>
+            </Style>
+
         </ResourceDictionary>
     </Application.Resources>
 </Application>
