Revert "refactoring async"
This reverts commit 9a58e5b070c5dca17e7db7dd9eb1734440bc617d.

--- a/StringFunApp.Solution/StringFunApp/StringFunApp/Views/ContactView.xaml
+++ b/StringFunApp.Solution/StringFunApp/StringFunApp/Views/ContactView.xaml
@@ -4,9 +4,7 @@
              x:Class="StringFunApp.Views.ContactView">
     <ContentPage.Content>
         <StackLayout>
-            <FlexLayout JustifyContent="Center" BackgroundColor="#2287b1">
-                <Label Text="StringFun" Style="{DynamicResource TitleStyle}"/>
-            </FlexLayout>
+            <Label>Hier komt contactinformatie</Label>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
