Changed layout of selected buttons. Navigating to VideoPage if no VideoInfos are found.

--- a/StringFunApp.Solution/StringFunApp/StringFunApp/Views/ContactView.xaml
+++ b/StringFunApp.Solution/StringFunApp/StringFunApp/Views/ContactView.xaml
@@ -4,7 +4,8 @@
              x:Class="StringFunApp.Views.ContactView">
     <ContentPage.Content>
         <StackLayout>
-            <Label>This app has been created by STAP Roeselare, who owns the rights. You can contact the at appprojecten@staproeselare.be.</Label>
+            <Label>This app has been created by STAP Roeselare, who owns the rights. You can contact the developer at developer@staproeselare.be.</Label>
+            <Label>Visit the website www.stringfun.com.</Label>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
