--- a/StringFunApp.Solution/StringFunApp/StringFunApp/Views/VideoPlayerView.xaml
+++ b/StringFunApp.Solution/StringFunApp/StringFunApp/Views/VideoPlayerView.xaml
@@ -3,32 +3,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:video="clr-namespace:FormsVideoLibrary"
              xmlns:bhv="clr-namespace:StringFunApp.Behaviors"
+             xmlns:local="clr-namespace:StringFunApp.ClassLibrary.ViewModels"
              x:Class="StringFunApp.Views.VideoPlayerView">
-    <ContentPage.ToolbarItems>
-        <ToolbarItem Text="Contact" Command="{Binding ViewContact}"></ToolbarItem>
-    </ContentPage.ToolbarItems>
     <ContentPage.Content>
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="50" />
-                <RowDefinition Height="40" />
-                <RowDefinition Height="Auto" />
-            </Grid.RowDefinitions>
-
-            <FlexLayout Grid.Row="0" JustifyContent="Center" BackgroundColor="#2287b1">
-                <Image Source="https://www.staproeselare.be/stringfun/images/logo.png"></Image>
-            </FlexLayout>
-
-            <FlexLayout Wrap="Wrap" Grid.Row="1">
-                <Picker x:Name="StapVideos" Title="Kies een video" ItemsSource="{Binding Videos}" HorizontalOptions="CenterAndExpand" WidthRequest="600">
-                    <Picker.Behaviors>
-                        <bhv:EventToCommandBehavior EventName="SelectedIndexChanged" Command="{Binding ShowVideoPlayer}"></bhv:EventToCommandBehavior>
-                    </Picker.Behaviors>
-                </Picker>
-            </FlexLayout>
-
-            <video:VideoPlayer IsVisible="{Binding Visible}" Grid.Row="2" x:Name="videoPlayer" Source="{Binding Source={x:Reference StapVideos}, Path=SelectedItem.VideoSource}"></video:VideoPlayer>
-
-        </Grid>
+        <FlexLayout>
+            <video:VideoPlayer x:Name="videoPlayer" AutoPlay="true"></video:VideoPlayer>
+        </FlexLayout>
     </ContentPage.Content>
 </ContentPage>
