--- a/StringFunApp.Solution/StringFunApp/StringFunApp/Views/VideoSelectorView.xaml
+++ b/StringFunApp.Solution/StringFunApp/StringFunApp/Views/VideoSelectorView.xaml
@@ -14,15 +14,14 @@
                 <StackLayout>
                     <FlexLayout JustifyContent="Center" BackgroundColor="#2287b1">
                         <Image Source="https://www.staproeselare.be/stringfun/images/logo.png"></Image>
-                    </FlexLayout>
-                    <FlexLayout JustifyContent="Center">
-                        <Label Margin="10" FontSize="Large" Text="{Binding TypeInstrument}"></Label>
-                        <Label Margin="10" FontSize="Large" Text="{Binding BoekNaam}"></Label>
-                        <Label Margin="10" FontSize="Large" Text="{Binding StapNummer}"></Label>
+                        <FlexLayout JustifyContent="Center">
+                            <Label Margin="10" FontSize="Large" Text="{Binding TypeInstrument}"></Label>
+                            <Label Margin="10" FontSize="Large" Text="{Binding BoekNaam}"></Label>
+                        </FlexLayout>
                     </FlexLayout>
                     <Grid>
                         <Grid.RowDefinitions>
-                            <RowDefinition Height="{Binding HeaderHeight}"  />
+                            <RowDefinition Height="80"  />
                             <RowDefinition Height="auto" />
                             <RowDefinition Height="auto"/>
                         </Grid.RowDefinitions>
@@ -44,44 +43,24 @@
                         IsVisible="{Binding ListVisibility}"
                         HorizontalOptions="FillAndExpand"
                         BackgroundColor="#2287b1"
-                        AlignItems="Center"
-                        >
-                            <Label x:Name="ListHeader"
-                            WidthRequest="300"
-                            Text="Kies een video."
+                        AlignItems="Center">
+                            <Label x:Name="ListHeader" 
+                            Text="Kies een video." 
                             HorizontalTextAlignment="Center"
                             VerticalTextAlignment="Center"
+                            HeightRequest="50" 
                             TextColor="White"
-                            FontSize="Medium"
                             />
                         </FlexLayout>
                         <FlexLayout
                         Grid.Row="2"
-                        AlignContent="Center"
+                        JustifyContent="Center"
                         IsVisible="{Binding ListVisibility}" 
                         >
                             <ListView 
                             x:Name="VideoListView" 
-                            ItemsSource="{Binding Videos}" 
+                            ItemsSource="{Binding VideoDisplayNames}" 
                             >
-                                <ListView.ItemTemplate>
-                                    <DataTemplate>
-                                        <ViewCell>
-                                            <Grid>
-                                                <Grid.ColumnDefinitions>
-                                                    <ColumnDefinition Width="*" />
-                                                </Grid.ColumnDefinitions>
-                                                <Label Text="{Binding DisplayName}"
-                                                   HorizontalOptions="FillAndExpand"
-                                                   HorizontalTextAlignment="Center"
-                                                   VerticalTextAlignment="Center"
-                                                   HeightRequest="50"
-                                                   TextColor="Black"
-                                                   BackgroundColor="#eeeeee"/>
-                                            </Grid>
-                                        </ViewCell>
-                                    </DataTemplate>
-                                </ListView.ItemTemplate>
                             </ListView>
                         </FlexLayout>
                     </Grid>
